# Calagopus-Regions

./: Metadata.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  models.rs
backend/src/routes/: admin.rs  client.rs  mod.rs
backend/src/services/: manager.rs
frontend/: package.json
frontend/src/: index.ts
frontend/src/api/: admin.ts  client.ts
frontend/src/components/: RegionBadge.tsx  ServerRegionCard.tsx
frontend/src/pages/: AdminRegionsPage.tsx
frontend/src/types/: index.ts
migrations/20260524000000_region_init/: down.sql  up.sql
